# curs

./: .clippy.toml  Cargo.toml  Rocket.toml
.circleci/: config.yaml
db/: .env  Cargo.toml
db/src/: lib.rs  models.rs  schema.rs
lc/: Cargo.toml  Rocket.toml
lc/src/: main.rs  routes.rs
src/: connect.rs  lib.rs  main.rs  models.rs  schema.rs
src/queries/: mod.rs
src/routes/: mod.rs  responders.rs
