[package]
name = "cursovaya"
version = "0.1.0"
authors = ["Denys"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.0", features = ["tls"] }
rocket_codegen = "0.4.0"
diesel = { version = "1.4.1", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.17"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]