[package]
name = "db"
version = "0.1.0"
authors = ["marior765 <d.bohatyrchk@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.9.0"
rocket = { version = "0.4.0", features = ["tls"] }
rocket_codegen = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"